--- a/index.html
+++ b/index.html
@@ -162,8 +162,8 @@
 <div class="navbar">
     <a href="#" class="logo">MyWebsite</a>
     <div class="nav-links">
-        <a href="home.html">Home</a>
-        <a href="#">About</a>
+        <a href="index.html">Home</a>
+        <a href="about.html">About</a>
         <a href="#">Services</a>
         <a href="#">Contact</a>
     </div>
