--- a/about.html
+++ b/about.html
@@ -179,6 +179,8 @@
     • Happening Now - See ongoing events in real time, and opt in to get all the announcements, updates regarding the ongoing fest.
            
     It's completely free. 
+    <h4>Sign Up to choose the interested clubs and get notifications, remainders when an event, registration, etc is announced.</h4><button class="big-button "onclick="window.location.href='https://forms.gle/mf1dbMMjwromp5fM8';">Sign Up</button>
+
 
 </body>
 
