--- a/index.html
+++ b/index.html
@@ -199,6 +199,15 @@
         <td><a href="https://docs.google.com/forms/d/e/1FAIpQLSfGQw10Df5nfi9EQLLqaKB1T1C-ZA7tYTbrYH3XDjRVLC61Cg/closedform">Register</a></td>
     </tr>
 
+                <tr>           
+            <td>BB - Agate vs GB</td>
+        <td>Aaveg</td>
+        <td>26-02-25</td>
+        <td>5:30pm</td>
+        <td>-</td>
+        <td>-</td>
+    </tr>
+
     <tr>           
             <td>Propulso</td>
         <td>Nakshatra</td>
