--- a/index.html
+++ b/index.html
@@ -285,6 +285,22 @@
         </tr>
 
     <tr>
+        <td>Subway Surfers</td>
+        <td>Aaveg</td>
+       <td>5:30pm</td>
+        <td><a href="https://docs.google.com/forms/d/e/1FAIpQLSdHXuQz37XPCOTxPSvfV_CF4ve-I_KvIdSZwq0qH0pjg5myRQ/viewform">link</a></td>
+        <td>LHC 03</td>
+    </tr>
+
+    <tr>
+        <td>Theme Reveal</td>
+        <td>NITTFEST</td>
+       <td>-</td>
+        <td><a href="https://www.instagram.com/reel/DGdRHPnI2w4/?igsh=b2N5aW1obWxhajN4">link</a></td>
+        <td>-</td>
+    </tr>
+
+    <tr>
         <td>Valorant Results</td>
         <td>Aaveg</td>
         <td>-</td>
@@ -307,16 +323,6 @@
         <td><a href="https://www.instagram.com/stories/aaveg.nitt/3574967024255850667?igsh=cGVneWxrZjVybjBn">link</a></td>
         <td>-</td>
     </tr>
-    
-     <tr>
-        <td>Theme Reveal</td>
-        <td>NITTFEST</td>
-       <td>-</td>
-        <td><a href="https://www.instagram.com/reel/DGdRHPnI2w4/?igsh=b2N5aW1obWxhajN4">link</a></td>
-        <td>-</td>
-    </tr>
-   
-
     </table>
 
 </body>
